[package]
name = "core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
clap.workspace = true
tokio-stream = "0.1"
regex = "1"

[build-dependencies]
tonic-build = "0.12"

[lib]
name = "bgpgg"
path = "src/lib.rs"

[[bin]]
name = "load_test"
path = "loadtests/main.rs"
