[package]
name = "daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bgpggd"
path = "src/main.rs"

[dependencies]
core = { path = "../core" }
conf = { path = "../conf" }
tokio.workspace = true
tonic.workspace = true
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
