[package]
name = "ggsh"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ggsh"
path = "src/main.rs"

[dependencies]
core = { path = "../core" }
conf = { path = "../conf" }
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
uuid.workspace = true
rustyline = { version = "15", features = ["derive"] }
