[package]
name = "loadtests"
version.workspace = true
edition.workspace = true

[dependencies]
bgpgg = { path = "../core", package = "core" }
conf = { path = "../conf" }
tokio.workspace = true
tokio-stream = "0.1"
tonic.workspace = true
prost.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
rand = "0.8"
libc = "0.2"

[dev-dependencies]
# For running actual load tests
